--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -1,6 +1,6 @@
 <nav>
     <a href="#home" class="nav-link">Home</a>
-    <a href="../homeComponenet/home.html" class="nav-link">About</a>
+    <a href="#about" class="nav-link">About</a>
     <a href="#contact" class="nav-link">Contact</a>
   </nav>
   
