--- a/Components/homeComponenet/home.html
+++ b/Components/homeComponenet/home.html
@@ -1,5 +1,12 @@
 <section>
-    <h1>Welcome to Home Page</h1>
-    <p>This is the home page contentff.</p>
-  </section>
-  
+  <div class="home">
+    <div>
+      <h4 class="active_home">FRESH & ORGANIC</h4>
+      <p>Delicious Seasonal Fruits</p>
+      <div>
+        <button class="shop">Fruit Collection</button>
+        <button class="contact_us">Contact Us</button>
+      </div>
+    </div>
+  </div>
+</section>
