--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -1,6 +1,15 @@
 <nav>
-    <a href="#home" class="nav-link">Home</a>
-    <a href="#about" class="nav-link">About</a>
-    <a href="#contact" class="nav-link">Contact</a>
-  </nav>
-  
+  <div class="logo">
+    <img src="../../Components/assets/img/logo.png" alt="" />
+  </div>
+  <ul>
+    <li><a href="" class="active">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">Shop</a></li>
+    <li><a href="">Contact</a></li>
+  </ul>
+  <div class="signin logo">
+    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+    <a href="">Sing In</a>
+  </div>
+</nav>
