--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -9,7 +9,7 @@
     <li><a href="">Contact</a></li>
   </ul>
   <div class="signin logo">
-    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+    <a href="#Cart"><i class="fa-solid fa-cart-shopping"></i></a>
     <a href="">Sing In</a>
   </div>
 </nav>
