--- a/Components/homeComponenet/home.css
+++ b/Components/homeComponenet/home.css
@@ -6,7 +6,7 @@ section {
   top: 0;
   min-height: 100vh;
   background-image: linear-gradient(
-      rgba(0, 0, 0, 0.616),
+      rgba(0, 0, 0, 0.801),
       rgba(255, 132, 0, 0.107)
     ),
     url("../assets/img/hero-bg.jpg");
@@ -25,7 +25,8 @@ section {
   width: 100vw;
   height: 100vh;
   content: "";
-} */
+} 
+*/
 .home div {
   text-align: center;
 }
@@ -49,18 +50,19 @@ button {
   border-radius: 25px;
   color: white;
   font-weight: bolder;
+  transition: 0.65s;
 }
 button:hover {
-  transition: 1s;
+  transition: 0.65s;
 }
 .shop {
   background-color: #f28123;
   border: none;
 }
 .shop:hover {
-  background-color: #0a0a0a98;
+  background-color: #0a0a0aa4;
   border: none;
-  color: #f17511;
+  color: #f78930;
 }
 .contact_us {
   border: solid 2px #f28123;
@@ -81,7 +83,7 @@ button:hover {
   margin: 0px auto;
   text-align: center;
 }
-.our_prod div{
+.our_prod div {
   padding-top: 4rem;
 }
 .title_orange {
@@ -99,6 +101,7 @@ button:hover {
   background-color: #f28123;
   top: 61%;
 }
+
 /* =============cards============= */
 .card {
   margin: 50px;
@@ -111,7 +114,6 @@ button:hover {
 }
 .card > div {
   width: calc(100% / 3);
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -120,7 +122,23 @@ button:hover {
   height: 33rem;
   border-radius: 15px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
+  transition: transform 0.7s ease;
 }
+.card div:hover {
+  border: none;
+  box-shadow: none;
+  transform: scale(1.1);
+  transition: transform 0.7s ease;
+  /* animation: cards 0.7s  1 alternate; */
+}
+/* @keyframes cards {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.1);
+  } */
+/* } */
 .card img {
   width: 70%;
 }
@@ -140,6 +158,11 @@ button:hover {
 .card button {
   font-weight: 400;
   margin-bottom: 28px;
+}
+.card button:hover {
+  background-color: #0a0a0ae7;
+  border: none;
+  color: #f78930;
 }
 .card .price p {
   font-size: 30px;
