--- a/Components/homeComponenet/home.html
+++ b/Components/homeComponenet/home.html
@@ -13,10 +13,25 @@
 <section class="our_prod">
   <div class="our_prod">
     <p class="title_size"><span class="title_orange">Our</span> Products</p>
-    <span class="light_small_font"> magnam illo vel, ex cum, dignissimos iusto libero molestiae dolorem ut beatae, placeat vitae atque expedita in.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</span>
+    <span class="light_small_font">
+      magnam illo vel, ex cum, dignissimos iusto libero molestiae dolorem ut
+      beatae, placeat vitae atque expedita in.Lorem ipsum dolor sit amet,
+      consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae
+      optio.</span
+    >
   </div>
 </section>
 <section class="card">
+  <div>
+    <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
+    <p>Strawberry</p>
+    <div class="price">
+      <span class="light_small_font">Per Kg</span>
+      <p>85$</p>
+    </div>
+    <button class="shop">
+      <i class="fa-solid fa-cart-shopping"></i>Add to Card
+    </button>
   </div>
   <div>
     <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
@@ -25,35 +40,20 @@
       <span class="light_small_font">Per Kg</span>
       <p>85$</p>
     </div>
-    <button class="shop"><i class="fa-solid fa-cart-shopping"></i>Add to Card</button>
+    <button class="shop">
+      <i class="fa-solid fa-cart-shopping"></i>Add to Card
+    </button>
   </div>
   <div>
     <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
     <p>Strawberry</p>
     <div class="price">
-      <span>Per Kg</span>
+      <span class="light_small_font">Per Kg</span>
       <p>85$</p>
     </div>
-    <button class="shop"><i class="fa-solid fa-cart-shopping"></i>Add to Card</button>
-  </div>
-  <div>
-    <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
-    <p>Strawberry</p>
-    <div class="price">
-      <span>Per Kg</span>
-      <p>85$</p>
-    </div>
-    <button class="shop"><i class="fa-solid fa-cart-shopping"></i>Add to Card</button>
-  </div>
-  <div>
-    <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
-    <p>Strawberry</p>
-    <div class="price">
-      <span>Per Kg</span>
-      <p>85$</p>
-    </div>
-    <button class="shop"><i class="fa-solid fa-cart-shopping"></i>Add to Card</button>
+    <button class="shop">
+      <i class="fa-solid fa-cart-shopping"></i>Add to Card
+    </button>
   </div>
   
-
 </section>
