--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -3,13 +3,13 @@
     <img src="../../Components/assets/img/logo.png" alt="" />
   </div>
   <ul>
-    <li><a href="" class="active">Home</a></li>
-    <li><a href="">About</a></li>
+    <li><a href="#home" class="active">Home</a></li>
+    <li><a href="#product">About</a></li>
     <li><a href="">Shop</a></li>
     <li><a href="">Contact</a></li>
   </ul>
   <div class="signin logo">
     <a href="#Cart"><i class="fa-solid fa-cart-shopping"></i></a>
-    <a href="">Sing In</a>
+    <a href="#logIn">Sing In</a>
   </div>
 </nav>
