A failled try to change the nav bg color on scrolling

--- a/Components/navbarComponent/navbar.css
+++ b/Components/navbarComponent/navbar.css
@@ -24,9 +24,11 @@ nav  {
   top: 0;
   left: 0;
   width: 100%;
-
   /* ;
   left: 1rem; */
+}
+.dark_nav{
+  background-color: rgba(0, 0, 0, 0.774);
 }
 nav ul {
   display: flex;
