Navbar animation is ready but little problem when sliding

--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -1,4 +1,4 @@
-<nav>
+<nav id="nav">
   <div class="logo">
     <img src="../../Components/assets/img/logo.png" alt="" />
   </div>
@@ -13,4 +13,4 @@
     <a href="">Sing In</a>
   </div>
 </nav>
-
+<script src="navbar.js"></script>
