navbar completed successfuly

--- a/Components/navbarComponent/navbar.css
+++ b/Components/navbarComponent/navbar.css
@@ -10,7 +10,7 @@ body{
   margin: auto;
 }
 nav  {
-  /* z-index: 2; */
+  z-index: 2;
   background: transparent;
   top: 0;
   color: white;
@@ -24,8 +24,6 @@ nav  {
   top: 0;
   left: 0;
   width: 100%;
-  /* ;
-  left: 1rem; */
 }
 .dark_nav{
   background-color: rgba(0, 0, 0, 0.774);
