--- a/Components/logInComponent/login.css
+++ b/Components/logInComponent/login.css
@@ -34,6 +34,17 @@
     border-radius: 25px;
     width: 70%;
     padding-inline: 16px;
+ 
+    display: block;
+    
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+     
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .brand {
@@ -60,4 +71,12 @@
     border: none;
     color: #f17511;
     transition: 0.5s;
+}
+.login-form input:focus {
+    
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem #f2802348;
 }
