--- a/Components/homeComponenet/home.html
+++ b/Components/homeComponenet/home.html
@@ -1,3 +1,4 @@
+
 <section>
   <div class="home">
     <div>
@@ -21,39 +22,11 @@
     >
   </div>
 </section>
+
+<!-- cards section -->
+
 <section class="card">
-  <div>
-    <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
-    <p>Strawberry</p>
-    <div class="price">
-      <span class="light_small_font">Per Kg</span>
-      <p>85$</p>
-    </div>
-    <button class="shop">
-      <i class="fa-solid fa-cart-shopping"></i>Add to Card
-    </button>
-  </div>
-  <div>
-    <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
-    <p>Strawberry</p>
-    <div class="price">
-      <span class="light_small_font">Per Kg</span>
-      <p>85$</p>
-    </div>
-    <button class="shop">
-      <i class="fa-solid fa-cart-shopping"></i>Add to Card
-    </button>
-  </div>
-  <div>
-    <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
-    <p>Strawberry</p>
-    <div class="price">
-      <span class="light_small_font">Per Kg</span>
-      <p>85$</p>
-    </div>
-    <button class="shop">
-      <i class="fa-solid fa-cart-shopping"></i>Add to Card
-    </button>
-  </div>
   
 </section>
+
+<script src="home.js"></script>
