add card component

--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -5,7 +5,7 @@
   <ul>
     <li><a href="#home" class="active">Home</a></li>
     <li><a href="#product">About</a></li>
-    <li><a href="">Shop</a></li>
+    <li><a href="#card">Shop</a></li>
     <li><a href="">Contact</a></li>
   </ul>
   <div class="signin logo">
