add login in localstorage

--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -8,9 +8,9 @@
     <li><a href="#card">Shop</a></li>
     <li><a href="">Contact</a></li>
   </ul>
-  <div class="signin logo">
+  <div id="userdata" class="signin logo">
     <a href="#Cart"><i class="fa-solid fa-cart-shopping"></i></a>
-    <a href="#logIn">Sing In</a>
+    <a id="login" href="#logIn">Sing In</a>
   </div>
 </nav>
  
