add product details

--- a/Components/CartComponent/Cart.html
+++ b/Components/CartComponent/Cart.html
@@ -11,49 +11,9 @@
                     <th>Total</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <button class="btn-remove">X</button>
-                    </td>
-                    <td>
-                        <img class="cart-image" src="/Components/assets/img/abt.jpg"alt="">
-                    </td>
-                    <td>Strawberry</td>
-                    <td>$85	</td>
-                    <td>
-                        <input  class="count-input" type="number" name="" id="">
-                    </td>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <td>
-                        <button>X</button>
-                    </td>
-                    <td>
-                        <img  style="width: 50px" src="/Components/assets/img/abt.jpg"alt="">
-                    </td>
-                    <td>Strawberry</td>
-                    <td>$85	</td>
-                    <td>
-                        <input  class="count-input" type="number" name="" id="">
-                    </td>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <td>
-                        <button>X</button>
-                    </td>
-                    <td>
-                        <img style="width: 50px" src="/Components/assets/img/abt.jpg"alt="">
-                    </td>
-                    <td>Strawberry</td>
-                    <td>$85	</td>
-                    <td>
-                        <input class="count-input" type="number" name="" id="">
-                    </td>
-                    <td>1</td>
-                </tr>
+            <tbody id="tbody">
+               
+                
             </tbody>
         </table>
     </div>
@@ -87,7 +47,7 @@
                 <tr>
                     
                     <th>Total:	</th>
-                    <td>
+                    <td id="total-price">
                         $545
                     </td>
                     
