--- a/Components/ProductComponent/product.html
+++ b/Components/ProductComponent/product.html
@@ -1,29 +1,3 @@
-<div class="product-contaner">
-    <div class="prodact-details">
-        <div class="gallary">
-            <div class="gallary-images">
-                <img class="cart-image" src="/Components/assets/img/abt.jpg"alt="">
-                <img class="cart-image" src="/Components/assets/img/abt.jpg"alt="">
-                <img class="cart-image" src="/Components/assets/img/abt.jpg"alt="">
-                <img class="cart-image" src="/Components/assets/img/abt.jpg"alt="">
-            </div>
-            <div class="main-image">
-                <img   src="/Components/assets/img/abt.jpg"alt="">
-            </div>
-        </div>
-        <div class="product-details">
-            <h2>
-                Green Apples have polyphenonls
-            </h2>
-            <h4 class="amount">per KG</h4>
-            <h2>$50</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita eligendi autem repellendus maxime esse nostrum qui iste, consequuntur magni suscipit odit corrupti voluptas sed sapiente. Vero sapiente amet rerum ad?</p>
-            <div class="inputs">
-                <input class="Quantaty-Number" type="number" name="" id="">
-                <button class="add-to-cart"><i class="fa-solid fa-cart-shopping"></i> add to cart</button>
-            </div>
-            
-        </div>
-    </div>
-   
+<div id="product-contaner" class="product-contaner">
+    
 </div>
