--- a/Components/homeComponenet/home.html
+++ b/Components/homeComponenet/home.html
@@ -24,9 +24,16 @@
 </section>
 
 <!-- cards section -->
+<div class="filter"  >
+  <div class="subFilter">
+    <span>Filter: </span>
+    <button onclick="filter(2)" class="shop filter-btn">fruits </button>
+    <button onclick="filter(3)"  class="shop filter-btn">vegetable </button>
+
+  </div>
+</div>
 
 <section class="card">
-  
 </section>
 
 <script src="home.js"></script>
