--- a/Components/homeComponenet/home.css
+++ b/Components/homeComponenet/home.css
@@ -126,7 +126,26 @@ button:hover {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
   transition: transform 0.7s ease;
 }
+.card > a {
+  width: calc(100% / 4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  /* width: 20rem; */
+  height: 33rem;
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
+  transition: transform 0.7s ease;
+}
 .card div:hover {
+  border: none;
+  box-shadow: none;
+  transform: scale(1.1);
+  transition: transform 0.7s ease;
+  /* animation: cards 0.7s  1 alternate; */
+}
+.card a:hover {
   border: none;
   box-shadow: none;
   transform: scale(1.1);
@@ -169,4 +188,28 @@ button:hover {
 .card .price p {
   font-size: 30px;
   margin: 0px;
+}
+/* ========================filter=========== */
+.filter{
+  display: flex;
+  width: 100%;
+}
+.subFilter{
+  margin-inline: 10%;
+  
+  
+  display: flex;
+ 
+   width: 22%;
+  align-items: center;
+  justify-content: space-around;
+  /* width: 20rem; */
+  
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
+  transition: transform 0.7s ease;
+}
+.filter-btn{
+  font-weight: 400;
+ 
 }
