Add Delete item Form cart

--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -9,7 +9,7 @@
     <li><a href="">Contact</a></li>
   </ul>
   <div id="userdata" class="signin logo">
-    <a href="#Cart"><i class="fa-solid fa-cart-shopping"></i></a>
+    <a id="cart"  href="#Cart"><i class="fa-solid fa-cart-shopping"> <span id="cart_count">0</span></i></a>
     <a id="login" href="#logIn">Sing In</a>
   </div>
 </nav>
