--- a/Components/navbarComponent/navbar.css
+++ b/Components/navbarComponent/navbar.css
@@ -50,3 +50,20 @@ nav a:hover, i:hover{
 nav img{
   width: 150px;
 }
+#cart{
+  position: relative;
+}
+#cart_count{
+  position: absolute;
+  top: -8px;
+  right: -6px;
+  width: 13px;
+  height: 13px;
+  background-color: red;
+  font-size: 9px;
+  border-radius: 50%;
+  text-align: center;
+  display: block;
+  justify-items: center;
+  align-content: center;
+}
