--- a/Components/CartComponent/Cart.html
+++ b/Components/CartComponent/Cart.html
@@ -37,6 +37,9 @@
                     </td>
                     
                 </tr>
+                <tr>
+                   <td> <a  onclick="checkout(event)"   id="checkout">Check Out</a></td>
+                </tr>
             </tbody>
         </table>
 
