--- a/Components/logInComponent/login.html
+++ b/Components/logInComponent/login.html
@@ -14,6 +14,7 @@
             <input type="Password" id="Password" name="Password" placeholder="Enter Password">
             <span id="password-alert" class="alert"></span>
         </div>
+        <span id="password-alert" class="alert"></span>
         <div class="login-form">
             <button id="submit" type="submit">Login</button>
         </div>
