--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -11,6 +11,8 @@
   <div id="userdata" class="signin logo">
     <a id="cart"  href="#Cart"><i class="fa-solid fa-cart-shopping"> <span id="cart_count">0</span></i></a>
     <a id="login" href="#logIn">Sing In</a>
+    <a id="register" href="#register">Sing up</a>
+
   </div>
 </nav>
  
