--- a/Components/cardsComponenet/cards.html
+++ b/Components/cardsComponenet/cards.html
@@ -1,14 +1,18 @@
-<section class="card">
-  <div>
-    <img src="/Components/assets/img/products/product-img-2.jpg" alt="" />
-    <p>{{ name }}</p>
-    <div class="price">
-      <span class="light_small_font">Per Kg</span>
-      <p>eslam$</p>
+<section class="home img_2">
+    <div class="about_card">
+      <div class="price">
+        <img src="/Components/assets/david.jpg"/>
+        <p>David Hakim</p>
+        <p class="prof">CEO</p>
+      </div>
     </div>
-    <button class="shop">
-      <i class="fa-solid fa-cart-shopping"></i>Add to Card
-    </button>
-  </div>
- 
+    <div class="about_card">
+      <div class="price">
+        <img src="/Components/assets/eslam.png"/>
+        <p>Eslam El-Amir</p>
+        <p class="prof">CTO</p>
+      </div>
+    </div>
+
+    
 </section>
