--- a/Components/ProductComponent/product.css
+++ b/Components/ProductComponent/product.css
@@ -1,81 +1,77 @@
-.product-contaner{
-    margin-block: 150px;
-    display: flex;
-    width: 100%;
-    justify-content: center;
-   
+.product-contaner {
+  margin-block: 150px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
-.prodact-details{
-    display: flex;
-    width: 70%;
-    gap: 20px;
+.prodact-details {
+  display: flex;
+  width: 70%;
+  gap: 20px;
 }
-.gallary{
-    display: flex;
-    width: 50%;
+.gallary {
+  display: flex;
+  width: 50%;
 }
 .gallary .gallary-images {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 20%;
-    justify-content: space-evenly
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 20%;
+  justify-content: space-evenly;
 }
-.gallary .gallary-images img{
-    width: 100px;
-    
+.gallary .gallary-images img {
+  width: 100px;
 }
-.gallary .main-image{
-    display: flex;
-    align-items: center;
-    width: 75%;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
-    transition: transform 0.7s ease;}
-.gallary .main-image img{
-    width: 100%;
-    
+.gallary .main-image {
+  display: flex;
+  align-items: center;
+  width: 75%;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
+  transition: transform 0.7s ease;
+}
+.gallary .main-image img {
+  width: 100%;
 }
 
-.product-details{
-    width: 50%;
+.product-details {
+  width: 50%;
 }
-.Quantaty-Number{
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
-    width: 100px;
-    margin-bottom: 15px;
+.Quantaty-Number {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  width: 100px;
+  margin-bottom: 15px;
 }
-.add-to-cart{
-    font-family: 'Poppins', sans-serif;
-    display: inline-block;
-    background-color: #F28123;
-    color: #fff;
-    padding: 10px 20px;
-    width: 28%;
-    height: 7vh;
-    border-radius: 50px;
-    border:none;
-    font-size: 1rem;
-
-
+.add-to-cart {
+  font-family: "Poppins", sans-serif;
+  display: inline-block;
+  background-color: #f28123;
+  color: #fff;
+  padding: 10px 20px;
+  width: 28%;
+  height: 7vh;
+  border-radius: 50px;
+  border: none;
+  font-size: 1rem;
 }
-.add-to-cart:hover ,i:hover{
-    background-color: #0a0a0a98;
-    border: none;
-    color: #f17511;
-    transition: 0.6s;
+.add-to-cart:hover,
+i:hover {
+  background-color: #0a0a0a98;
+  border: none;
+  color: #f17511;
+  transition: 0.6s;
 }
-.inputs{
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-
+.inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
-.amount{
-    font-size: 18px;
-    display: block;
-    opacity: 0.8;
-    margin-bottom: 10px;
-    font-weight: 400;
+.amount {
+  font-size: 18px;
+  display: block;
+  opacity: 0.8;
+  margin-bottom: 10px;
+  font-weight: 400;
 }
