--- a/Components/cardsComponenet/cards.css
+++ b/Components/cardsComponenet/cards.css
@@ -1,3 +1,18 @@
+.home{
+  display: flex;
+  flex-flow: row wrap;
+  gap: 0%;
+  padding-top: 5%;
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(
+        rgba(2, 6, 49, 0.762),
+        rgba(255, 179, 0, 0.366)
+      )
+}
+
+
+
 button {
   margin: 10px;
   padding: 15px;
@@ -20,68 +35,52 @@ button:hover {
   color: #f78930;
 }
 /* =============cards============= */
-.card {
+.about_card {
   margin: 50px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   gap: 60px;
   justify-content: center;
-  min-height: 100vh;
-}
-.card > div {
   width: calc(100% / 3);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
   width: 20rem;
   height: 33rem;
   border-radius: 15px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
+  box-shadow: 0px 0px 15px rgba(98, 70, 24, 0.741);
   transition: transform 0.7s ease;
+  background-image: linear-gradient(
+    rgba(255, 179, 0, 0.366)
+        ,rgba(2, 6, 49, 0.762)
+      )
 }
-.card div:hover {
+
+.about_card:hover {
   border: none;
   box-shadow: none;
   transform: scale(1.1);
-  transition: transform 0.7s ease;
-  /* animation: cards 0.7s  1 alternate; */
 }
-/* @keyframes cards {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(1.1);
-  } */
-/* } */
-.card img {
-  width: 70%;
+
+.about_card img {
+  width: 16rem;
+  height: 22rem;
+  border-radius: 10%;
+  
 }
-.card p {
-  font-size: 20px;
-  font-weight: 600;
+.about_card p {
+  font-weight: 500;
   margin-bottom: 0px;
   margin-top: 30px;
+  letter-spacing: 2px;
 }
-.light_small_font {
-  font-size: 15px;
-  color: rgba(0, 0, 0, 0.453);
-}
-.card button i {
-  margin-right: 10px;
-}
-.card button {
-  font-weight: 400;
-  margin-bottom: 28px;
-}
-.card button:hover {
-  background-color: #0a0a0ae7;
-  border: none;
-  color: #f78930;
-}
-.card .price p {
-  font-size: 30px;
+
+.about_card .price p {
+  font-size: 2rem;
   margin: 0px;
+  color: #8190b1;
+}
+.about_card .price .prof{
+  font-size: 1.5rem;
+  margin: 0px;
+  color:     rgba(244, 218, 157, 0.84)
+  ;
 }
