--- a/Components/navbarComponent/navbar.css
+++ b/Components/navbarComponent/navbar.css
@@ -19,7 +19,8 @@ nav {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 10rem;
   position: fixed;
   top: 0;
   left: 0;
@@ -31,6 +32,8 @@ nav {
 nav ul {
   display: flex;
   list-style: none;
+  margin-left: 5rem;
+  margin-right: 1rem;
 }
 nav a {
   font-size: 1rem;
