--- a/Components/navbarComponent/navbar.html
+++ b/Components/navbarComponent/navbar.html
@@ -4,9 +4,8 @@
   </div>
   <ul>
     <li><a href="#home" class="active">Home</a></li>
-    <li><a href="#product">About</a></li>
-    <li><a href="#card">Shop</a></li>
-    <li><a href="">Contact</a></li>
+    <li><a href="#card">About</a></li>
+    <li><a href="#">Contact</a></li>
   </ul>
   <div id="userdata" class="signin logo">
     <a id="cart"  href="#Cart"><i class="fa-solid fa-cart-shopping"> <span id="cart_count">0</span></i></a>
