add responsive cards

--- a/Components/homeComponenet/home.html
+++ b/Components/homeComponenet/home.html
@@ -1,5 +1,5 @@
-<section>
-  <div class="wraper">
+<!-- <section> -->
+  <!-- <div class="wraper">
     <div class="home img_1">
       <h4 class="active_home">FRESH & ORGANIC</h4>
       <p>Delicious Seasonal Fruits</p>
@@ -24,10 +24,10 @@
         <button class="contact_us">Contact Us</button>
       </div>
     </div>
-  </div>
-</section>
-<section class="our_prod">
-  <div class="our_prod">
+  </div> -->
+<!-- </section> -->
+<!-- <section class="our_prod"> -->
+  <!-- <div class="our_prod">
     <p class="title_size"><span class="title_orange">Our</span> Products</p>
     <span class="light_small_font">
       magnam illo vel, ex cum, dignissimos iusto libero molestiae dolorem ut
@@ -35,8 +35,8 @@
       consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae
       optio.</span
     >
-  </div>
-</section>
+  </div> -->
+<!-- </section> -->
 
 <!-- cards section -->
 <div class="filter"  >
@@ -48,7 +48,10 @@
   </div>
 </div>
 
-<section class="card">
+<section class="row my-3 mx-0">
+  <div class="row container gx-1 col-12  justify-content-around " id="card">
+
+  </div>
 </section>
 
 <script src="home.js"></script>
