--- a/Components/homeComponenet/home.css
+++ b/Components/homeComponenet/home.css
@@ -142,7 +142,7 @@ button:hover {
 }
 
 /* =============cards============= */
-.card {
+/* .card {
   margin-block: 50px;
   display: flex;
   flex-wrap: wrap;
@@ -157,7 +157,6 @@ button:hover {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  /* width: 20rem; */
   height: 33rem;
   border-radius: 15px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.199);
@@ -169,25 +168,25 @@ button:hover {
   box-shadow: none;
   transform: scale(1.1);
   transition: transform 0.7s ease;
-  /* animation: cards 0.7s  1 alternate; */
+  animation: cards 0.7s  1 alternate;
 }
 .card a:hover {
   border: none;
   box-shadow: none;
   transform: scale(1.1);
   transition: transform 0.7s ease;
-  /* animation: cards 0.7s  1 alternate; */
+  animation: cards 0.7s  1 alternate;
 }
-/* @keyframes cards {
+@keyframes cards {
   from {
     transform: scale(1);
   }
   to {
     transform: scale(1.1);
-  } */
-/* } */
+  }  */
+/* }
 .card img {
-  width: 70%;
+  width: 60%;
   height: 40%;
   padding-top: 10%;
 }
